@@ -15,7 +15,7 @@ Paws::ECR::DeleteRepositoryResponse
 
 =head2 Repository => L<Paws::ECR::Repository>
 
-
+The repository that was deleted.
 
 
 
